# fenestra

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/fenestra-cascade/: Cargo.toml
crates/fenestra-cascade/src/: cache.rs  lib.rs  proxy.rs  upstream.rs
crates/fenestra-cli/: Cargo.toml
crates/fenestra-cli/src/: auth.rs  coverage.rs  handlers.rs  lib.rs  main.rs  metrics.rs  render.rs  source.rs
crates/fenestra-cli/tests/: router_tests.rs  wcs_tests.rs
crates/fenestra-core/: Cargo.toml
crates/fenestra-core/src/: capabilities.rs  config.rs  error.rs  lib.rs  mvt.rs  ogcapi.rs  plugin.rs  processes.rs  renderer.rs  sld.rs  tiles.rs  wcs.rs  wfs.rs  wms.rs  wmts.rs
crates/fenestra-core/tests/: fenestra_tests.rs
crates/fenestra-geofence/: Cargo.toml
crates/fenestra-geofence/src/: lib.rs  rules.rs  spatial.rs
crates/fenestra-inspire/: Cargo.toml
crates/fenestra-inspire/src/: csw.rs  harvest.rs  inspire.rs  lib.rs  records.rs
crates/fenestra-printing/: Cargo.toml
crates/fenestra-printing/src/: layout.rs  lib.rs  pdf.rs  render.rs
deploy/: prometheus.yml
deploy/helm/fenestra/: Chart.yaml  values.yaml
deploy/helm/fenestra/templates/: deployment.yaml  service.yaml
docs/: index.html  openapi.yaml
scripts/: load_test.js
