[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/GeoLang/fenestra"
authors = ["GeoLang <tiletopia@proton.me>"]
description = "Windowed geospatial queries and spatial indexing"
rust-version = "1.85"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
fenestra-core = { path = "crates/fenestra-core" }
fenestra-inspire = { path = "crates/fenestra-inspire" }
fenestra-geofence = { path = "crates/fenestra-geofence" }
fenestra-printing = { path = "crates/fenestra-printing" }
fenestra-cascade = { path = "crates/fenestra-cascade" }
