[package]
name = "fenestra-cli"
description = "CLI/server for the Fenestra OGC services gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fenestra"
path = "src/main.rs"

[dependencies]
fenestra-core.workspace = true
clap = { version = "4", features = ["derive"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
