[package]
name = "fenestra-core"
description = "OGC services gateway — WMS, WFS, WMTS, WCS protocol implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
