[package]
name = "fenestra-inspire"
description = "INSPIRE/CSW metadata catalog plugin for Fenestra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fenestra-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.40", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
